# MLops_Loan_pred

./: .gitignore  Makefile  README.md  hello.py  pyproject.toml  requirements.txt
data/prototyping/: inputs_sample.parquet  targets_sample.parquet
data/training/: inputs_test.parquet  inputs_train.parquet  targets_test.parquet  targets_train.parquet
encoders/: label_encoders.pkl  ordinal_encoder.pkl
notebooks/: analysing.ipynb  processing.ipynb  prototyping.ipynb
