[project]
name = "mlops-loan-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ # Main dependency
    "black>=24.10.0",
    "click>=8.1.8",
    "invoke>=2.2.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pylint>=3.3.3",
    "ruff>=0.9.0",
    "scikit-learn>=1.6.0",
]

[dependency-groups] # Development dependency
dev = [
    "ipykernel>=6.29.5",
    "mlflow>=2.19.0",
    "pytest>=8.3.4",
]
