[project]
name = "mlops-loan-pred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ # Main dependency
    "black>=24.10.0",
    "click>=8.1.8",
    "invoke>=2.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pylint>=3.3.3",
    "ruff>=0.9.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[dependency-groups] # Development dependency
dev = [
    "ipykernel>=6.29.5",
    "mlflow>=2.19.0",
    "pytest>=8.3.4",
]
